Experience bottles functioning

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,6 @@
 name: Expbottles
-version: @version@
+version: ${version}
 main: net.arcticforestmc.expbottles.Expbottles
+commands:
+  xpwithdraw:
+    description: 'Withdraw a specific amount of experience'
