--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ targetCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+    mavenLocal()
     maven {
         name = 'papermc-repo'
         url = 'https://papermc.io/repo/repository/maven-public/'
@@ -23,11 +24,23 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'com.destroystokyo.paper:paper-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly "org.jetbrains:annotations:20.0.0"
+    compileOnly 'org.bukkit:craftbukkit:1.12.2-R0.1-SNAPSHOT'
 }
 
 processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [version: version]
-    }
+    eachFile { expand version: version }
+}
+
+tasks.register("build_vald", Copy) {
+    dependsOn tasks.build
+
+    from jar.archiveFile
+    into "C:\\Users\\Valdemar\\Desktop\\mc\\minecraftServers\\1.12.2-ArcticTesting\\plugins" //1.12.2-ArcticTesting - 1.16.5
+}
+
+configure(build_vald) {
+    group = 'SlimePuncher'
+    description = 'Build and export jar'
 }
