--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: Expbottles
 version: ${version}
 main: net.arcticforestmc.expbottles.Expbottles
 commands:
-  xpwithdraw:
+  withdrawxp:
     description: 'Withdraw a specific amount of experience'
